2018-06-07  Kevin Ushey  <kevinushey@gmail.com>

	* inst/include/Rcpp/config.h: bump dev version

2018-06-06  Kevin Ushey  <kevinushey@gmail.com>

	* inst/include/Rcpp/RNGScope.h: Allow suspension of RNG synchronization
	* inst/include/Rcpp/routines.h: Idem
	* src/Rcpp_init.cpp: Idem
	* src/api.cpp: Idem

	* inst/include/Rcpp/api/meat/Rcpp_eval.h: Evaluate in base env

2018-06-02  Lionel Henry  <lionel@rstudio.com>

        * inst/unitTests/runit.interface.R: New test for the case where
        the client package was compiled without protected evaluation
        enabled. On R 3.5, longjump exceptions thrown from imported
        functions are still caught and dealt with properly by the client
        package.

        * inst/unitTests/runit.interface.R: Test both Rcpp_eval() and
        Rcpp_fast_eval().

2018-06-01  Lionel Henry  <lionel@rstudio.com>

        * inst/unitTests/runit.interface.R: New tests for interfaces and unwind.
        These tests build two packages, and that exports a function via
        Rcpp::interfaces(cpp) and the other that calls it. The attributes are
        regenerated and the packages rebuilt each time the tests are run. The
        tests check in particular that the C++ stack is properly unwound when a
        long jump occurs.

2018-05-31  Lionel Henry  <lionel@rstudio.com>

        * inst/include/Rcpp/api/meat/Rcpp_eval.h: Fix protected evaluation.

        Setting `RCPP_PROTECTED_EVAL` before including Rcpp.h enables a new R
        3.5 API for safe evaluation of R code. R longjumps are now correctly
        intercepted and rethrown. Thanks to this the C++ stack is now safely
        unwound when a longjump is detected while calling into R code. This
        includes the following cases: thrown errors, caught condition of any
        class, long return, restart invokation, debugger exit. Note that this is
        still experimental!

        When `RCPP_PROTECTED_EVAL` is enabled, Rcpp_eval() uses the